--- a/KDUST.cfg
+++ b/KDUST.cfg
@@ -1,4 +1,5 @@
 [gcode_macro KDUST]
+description: "Macros never get old, just a little...dusty"
 description: Klipper Dusting Utility with Sweeping Technique
 description: moves toolhead from min to max in zig zag using fan to clear dust and debris
 gcode:
