--- a/KDUST.cfg
+++ b/KDUST.cfg
@@ -1,51 +1,58 @@
 [gcode_macro KDUST]
-description: "Macros never get old, just a little...dusty"
-description: Klipper Dusting Utility with Sweeping Technique
 description: moves toolhead from min to max in zig zag using fan to clear dust and debris
-gcode:
-    {% if 'xyz' in printer.toolhead.homed_axes %}     
-        {% set y_distance = 10 %}  # Set the distance to move on the Y-axis in mm
-        {% set z_height = 5 %}     # Set height in mm
-        {% set speed = 50 %}       # Set the speed of movement in mm/s
-        {% set repeats = 0 %}
+gcode:     
+    {% set y_distance = 10 %}  # Set the distance to move on the Y-axis in mm
+    {% set z_height = 5 %}     # Set height in mm
+    {% set speed = 200 %}      # Set the speed of movement in mm/s
+    {% set repeats = 0 %}      # Set to the number of times you want the macro to repeat
+    {% set x_min_offset = 0 %} # Set to the distance in mm you want to offset sweeping movements from each edge
+    {% set y_min_offset = 0 %}
+    {% set x_max_offset = 8 %}
+    {% set y_max_offset = 0 %}
 
+    {% if 'xyz' in printer.toolhead.homed_axes %}       
+        {% set x_min = ((printer.toolhead.axis_minimum.x + 1) + x_min_offset) %}
+        {% set y_min = ((printer.toolhead.axis_minimum.y + 1) + y_min_offset) %}
+        {% set x_max = ((printer.toolhead.axis_maximum.x - 1) - x_max_offset) %}
+        {% set y_max = ((printer.toolhead.axis_maximum.y - 1) - y_max_offset) %}
+        {% set y_steps = (((y_max - y_min) / y_distance) / 2) | int %}
         {% set ns = namespace() %}
-        {% set ns.position = [printer.toolhead.axis_minimum.x, printer.toolhead.axis_minimum.y] %}
-        {% set coordinates = [] %}       
+        {% set ns.position = [x_min, y_min] %}
+        {% set coordinates = [] %} 
         
         {% for repeat in range(1 + repeats) %}
-            {% for i in range(((printer.toolhead.axis_maximum.y / y_distance) / 2 )|int) %}
-                {% set ns.position = [printer.toolhead.axis_maximum.x, ns.position[1]] %}
+            {% for i in range(y_steps) %}
+                {% set ns.position = [x_max, ns.position[1]] %}
                 {% set _ = coordinates.append(ns.position) %}
                 
                 {% set next_y = ns.position[1] + y_distance + i %}
-                {% if next_y <= printer.toolhead.axis_maximum.y %}
+                {% if next_y <= y_max %}
                     {% set ns.position = [ns.position[0], next_y] %}
                     {% set _ = coordinates.append(ns.position) %}
                 {% else %}
-                    {% set ns.position = [ns.position[0], printer.toolhead.axis_maximum.y] %}
+                    {% set ns.position = [ns.position[0], y_max] %}
                     {% set _ = coordinates.append(ns.position) %}
-                    {% set ns.position = [printer.toolhead.axis_minimum.x, ns.position[1]] %}
+                    {% set ns.position = [x_min, ns.position[1]] %}
                     {% set _ = coordinates.append(ns.position) %}
                 {% endif %}
                 
-                {% set ns.position = [printer.toolhead.axis_minimum.x, ns.position[1]] %}
+                {% set ns.position = [x_min, ns.position[1]] %}
                 {% set _ = coordinates.append(ns.position) %}
                 
                 {% set next_y = ns.position[1] + y_distance + i %}
-                {% if next_y <= printer.toolhead.axis_maximum.y %}
+                {% if next_y <= y_max %}
                     {% set ns.position = [ns.position[0], next_y] %}
                     {% set _ = coordinates.append(ns.position) %}
                 {% else %}
-                    {% set ns.position = [ns.position[0], printer.toolhead.axis_maximum.y] %}
+                    {% set ns.position = [ns.position[0], y_max] %}
                     {% set _ = coordinates.append(ns.position) %}
-                    {% set ns.position = [printer.toolhead.axis_maximum.x, ns.position[1]] %}
+                    {% set ns.position = [x_max, ns.position[1]] %}
                     {% set _ = coordinates.append(ns.position) %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
-
-        G0 X{printer.toolhead.axis_minimum.x} Y{printer.toolhead.axis_minimum.y} F{speed * 60}  # Move the toolhead to the minimum X and Y positions
+    
+        G0 X{x_min} Y{y_min} F{speed * 60}  # Move the toolhead to the minimum X and Y positions
         G0 Z{z_height}
         M106 S255  # Crank fan speed to max
     
@@ -54,7 +61,6 @@ gcode:
         {% endfor %}
     
         M107  # Turn off the fan
-    
-    {% else %}
+    {% else %} 
         { action_respond_info("Printer must be homed first") }
     {% endif %}
